# UG4-Thesis

code/: .gitignore  code.opam  dune-project  results.csv
code/_build/: .db  .digest-db  log
code/_build/default/: META.code  code.dune-package  code.install
code/_build/default/.dune/: configurator  configurator.v2
code/_build/default/lib/: code.cma  code.cmxa  code.cmxs  code.ml-gen  linreg.ml
code/_build/default/lib/.code.objs/byte/: code.cmi  code.cmo  code.cmt
code/_build/default/lib/.code.objs/native/: code.cmx
code/_build/default/lib/.merlin-conf/: lib-code
code/_build/default/lib/effects/: effects.cma  effects.cmxa  effects.cmxs  effects.ml
code/_build/default/lib/effects/.merlin-conf/: lib-code.effects
code/_build/default/lib/inference/mh/: mh.cma  mh.cmxa  mh.cmxs  mh.ml-gen
code/_build/default/lib/inference/pf/: pf.cma  pf.cmxa  pf.cmxs  pf.ml-gen
code/_build/default/lib/models/: hmm.ml  models.cma  models.cmxa  models.cmxs  models.ml-gen
code/_build/default/lib/models/.merlin-conf/: lib-code.models
code/_build/default/lib/models/.models.objs/: models__Hmm.impl.all-deps  models__Hmm.impl.d  models__Linear_regression.impl.d  models__Types.impl.d
code/_build/default/lib/utils/: stats.ml  utils.cma  utils.cmxa  utils.cmxs  utils.ml-gen
code/_build/default/lib/utils/.merlin-conf/: lib-code.utils
code/_build/default/lib/utils/.utils.objs/: utils__Stats.impl.d
code/_build/default/test/: test_code.ml  test_linreg.ml  test_models.ml  test_utils.ml
code/_build/default/test/.merlin-conf/: exe-test_code
code/_build/default/test/.test_code.eobjs/: dune__exe.ml-gen  dune__exe__Test_code.impl.all-deps  dune__exe__Test_code.impl.d  dune__exe__Test_code.intf.d  dune__exe__Test_models.impl.d  dune__exe__Test_utils.impl.d
code/_build/default/test/.test_code.eobjs/byte/: dune__exe.cmi  dune__exe.cmo  dune__exe.cmt  dune__exe__Test_code.cmi  dune__exe__Test_code.cmti  dune__exe__Test_models.cmi  dune__exe__Test_models.cmo  dune__exe__Test_models.cmt  dune__exe__Test_utils.cmi  dune__exe__Test_utils.cmo  dune__exe__Test_utils.cmt
code/_build/default/test/.test_code.eobjs/native/: dune__exe.cmx  dune__exe__Test_code.cmx  (+2 more)
code/benchmarks/: bench_cli.ml  bench_mh_hmm.ml  bench_mh_pf.ml  bench_mh_variants.ml  bench_pf_variants.ml  bench_utils.ml  dune  how_to_run_exps.md  plot_ocaml_vs_probfx.py  run_all_benchmarks.ml  run_benchmarks.sh  run_comparison.sh
code/graphs/: plot_benchmarks.py  plot_benchmarks_suite.py  plot_mh_benchmarks.py
code/lib/: dune  linreg.cmi  linreg.cmo  linreg.ml  utils.ml
code/lib/effects/: dune  effects.ml
code/lib/inference/mh/: dune  independence_mh.ml  mh_base.ml  particle_mh.ml  single_site_mh.ml
code/lib/inference/pf/: dune  multinomial_pf.ml  pf_base.ml  resample_move_pf.ml
code/lib/models/: dune  linear_regression.ml  types.ml
code/lib/ppfx/: dune  effects.ml  hmm.ml  linreg.ml  model.ml  runner.ml  test.ml
code/lib/ppfx/core/: dune  effects.ml  runner.ml
code/lib/ppfx/experiments/: bench_mpf.ml  bench_ssmh.ml  dune
code/lib/ppfx/inference/: dune  mult_pf.ml  ssmh.ml
code/lib/ppfx/models/: dune  linreg.ml
code/lib/ppfx/tests/: dune
code/lib/ppfx_cps/core/: addr.ml  dist.ml  dune  effects.ml  trace.ml
code/lib/ppfx_cps/inference/: dune  mh.ml
code/lib/ppfx_cps/models/: dune  lin_regr.ml
code/lib/ppfx_cps/tests/: dune  test_mh.ml
code/lib/ppfx_modular/core/: dist.ml  dist.mli  dune  effects.ml  effects.mli  model_handlers.ml  model_handlers.mli  types.ml  types.mli
code/lib/ppfx_modular/inference/pf/: advance.ml  advance.mli  dune  multpf.ml  multpf.mli  pf.ml
code/lib/ppfx_modular/models/: dune  lin_regr.ml
code/lib/ppfx_modular/tests/: bench_pf.ml  debug_mpf.ml  dune  test_mpf_convergence.ml  test_pf.ml
code/lib/ppfxrow/: cap_bench.ml  dune  generate_rng_file.sh  mh.ml  mh_bench.ml  mh_test.ml  mhcap_test.ml  mhcaps.ml  particle.ml  pf.ml  pf_bench.ml  pf_test.ml  probml.ml  probml_bench.ml  probml_test.ml  rng.ml  run_pf_bench.sh
code/lib/ppfxrow/plotting/: benchmarks-prob-fx.csv  ocaml_cap_benchmarks.csv  ocaml_pf_benchmarks.csv  ocaml_ssmh_benchmarks.csv  ocaml_unified_benchmarks.csv  plot_comparison.py
code/lib/ppfxrow/rng/: dune  generate_rng.ml  rng.ml
code/lib/utils/: dune  mh_utils.ml  stats.ml
code/test/: dune  test_code.ml  test_inference.ml  test_models.ml  test_utils.ml
(+184 files in other folders)
