(lang dune 3.20)

(name code)

(generate_opam_files true)

(source

 (github AXMonarch/UG4-Thesis))

(authors "Arindam Bag <s2305255@ed.ac.uk>")

(maintainers "Arindam Bag <s2305255@ed.ac.uk>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name code)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends (ocaml (>= 5.3.0))
           multicont
           mtime)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
