(library
 (name bench_utils)
 (modules bench_utils)
 (libraries mtime mtime.clock.os))

(executable
 (public_name bench_mh_variants)
 (name bench_mh_variants)
 (modules bench_mh_variants)
 (libraries effects utils models mh bench_utils))

(executable
 (public_name bench_pf_variants)
 (name bench_pf_variants)
 (modules bench_pf_variants)
 (libraries effects utils models pf bench_utils))
